crux-mir-comp/test/symb_eval/comp/spec_tuple.good
test spec_tuple/3a1fbbbh::f_test[0]: ok
test spec_tuple/3a1fbbbh::use_f[0]: FAILED

failures:

---- spec_tuple/3a1fbbbh::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/comp/spec_tuple.rs:55:5: 55:30: error: in spec_tuple/3a1fbbbh::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/spec_tuple.rs:55:5:
[Crux]   	d < 10

[Crux] Overall status: Invalid.
